--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
-
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="this is a lion.">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="this is a lion." title="rawrr">
 </body>
 </html>
